# arma-manager

./: .env.example  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  remove_me_later.rs  tree.txt
.cargo/: config
.github/workflows/: build.yml
crates/api_schema/: Cargo.toml
crates/api_schema/src/: a2s.rs  lib.rs  request.rs  response.rs
crates/arma/: Cargo.toml  profile.cfg  server.cfg
crates/arma/src/: lib.rs  parser.rs
crates/arma_serde/: Cargo.toml
crates/arma_serde/src/: error.rs  lib.rs  ser.rs
crates/dashboard/: Cargo.toml  package-lock.json  package.json  tailwind.config.js
crates/dashboard/src/: api.rs  app.rs  app_state.rs  error_template.rs  fileserv.rs  lib.rs  login.rs  preset_parser.rs  sse.rs
crates/dashboard/src/components/: client_only.rs  credentials.rs  dropzone.rs  edit_view.rs  header.rs  left_sidebar.rs  loading.rs  log_view.rs  mod.rs  nav_link.rs  page_content.rs  preset_dlc.rs  preset_item.rs  progress.rs  server_buttons.rs  steamcmd_dialog.rs  theme_select.rs  toast_container.rs
crates/dashboard/src/pages/: authenticated_base.rs  blank.rs  config.rs  dashboard.rs  home.rs  layout.rs  log.rs  login.rs  missions.rs  mod.rs  presets.rs  profile.rs  register.rs  users.rs
crates/dashboard/style/: dropzone.css  input.css  loading.css  output.scss
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs
crates/paths/: Cargo.toml
crates/paths/src/: lib.rs
crates/process/: Cargo.toml
crates/process/src/: lib.rs
crates/steam/: Cargo.toml
crates/steam/src/: installer.rs  lib.rs  log_watcher.rs
crates/web/: Cargo.toml
crates/web/migrations/: 20230710201633_init.up.sql  20230711084158_tokens.down.sql  20230711084158_tokens.up.sql  20230715112344_presets.down.sql  20230715112344_presets.up.sql  20230718103441_blacklist.down.sql  20230718103441_blacklist.up.sql  20230725161522_cdlc.down.sql  20230725161522_cdlc.up.sql  20230728085743_server_mod.down.sql  20230728085743_server_mod.up.sql
crates/web/src/: config.rs  jwt_auth.rs  lib.rs  log_service.rs  model.rs  response.rs  route.rs  status.rs  status_handler.rs  steam_handler.rs  user_handler.rs
crates/web/src/handlers/: a2s_handler.rs  arma_handler.rs  config_handlers.rs  dlc_handler.rs  logs_handler.rs  mission_handler.rs  mod.rs  preset_handler.rs  status_handler.rs  steam_handler.rs  user_handler.rs
crates/web/src/repository/: dlc_repository.rs  mod.rs  preset_repository.rs  user_repository.rs  user_token_repository.rs
crates/web/src/service/: a2s_service.rs  config_service.rs  dlc_service.rs  log_service.rs  mod.rs  preset_service.rs  status_service.rs
src/: main.rs
