[package]
name = "arma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "6.0.1"
directories = "5.0.1"
num_cpus = "1.16.0"

api_schema.workspace = true

anyhow.workspace = true
futures.workspace = true
paths.workspace = true
process.workspace = true
tokio.workspace = true
tracing.workspace = true
