[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"

md5 = "0.7.0"

api_schema.workspace = true
derive_more.workspace = true

axum = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
futures.workspace = true

tower = { version = "0.4", features = ["full"], optional = true }
tower-http = { version = "0.4", features = ["full"], optional = true }
gloo-net = "0.2"
gloo-storage = "0.2"
gloo-timers = "0.2"

leptos = { workspace = true, features = ["tracing"] }
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
leptos-use.workspace = true

http = "0.2"
thiserror = "1"
scraper = "0.17.1"
wasm-bindgen-futures = "0.4.37"
merge-streams = "0.1.2"
js-sys = "0.3.64"
web-sys = { version = "0.3.64" }
indicatif = "0.17.5"

chrono = { version = "0.4.26", features = ["wasmbind"] }

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:axum", "dep:leptos_axum", "dep:reqwest", "dep:tower", "dep:tower-http"]
