[package]
name = "steam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "6.0.1"
zip = "0.6.6"
zip-extensions = "0.6.1"


anyhow.workspace = true
futures.workspace = true
paths.workspace = true
process.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
