[package]
name = "arma_manager_web"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
api_schema.workspace = true
futures.workspace = true
notify.workspace = true

dashboard = { workspace = true, features = ["ssr"] }

steam.workspace = true
arma.workspace = true

paths.workspace = true

argon2 = "0.5.0"
axum-extra = { version = "0.7.4", features = ["cookie"] }
glob = "0.3.1"
jsonwebtoken = "8.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
sqlx = { version = "0.7.0", features = [
    "runtime-tokio",
    "sqlite",
    "time",
    "uuid",
] }
time = { version = "0.3.23", features = ["serde"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-http = { version = "0.4.1", features = ["cors"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
